# music

./: .gitignore  .vercelignore  build.sh  index.html  vercel.json
assets/bootstrap/: bootstrap.min.css
assets/engine/: engine.js  engine_bg.wasm
assets/js/: loader.js  scroll.js  util.js
engine/: Cargo.toml
engine/src/: features.rs  lib.rs  models.rs  utils.rs
engine/src/features/: core.rs  directory.rs  listing.rs  modal.rs  navigation.rs  search.rs  state.rs
engine/src/models/: directory.rs  modal.rs  song.rs  state.rs
lang/: en.json  es.json  fr.json  ja.json
