[package]
name = "engine"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.49"
console_error_panic_hook = "0.1.7"
web-sys = { version =  "0.3.76", features = ["Document", "Element", "HtmlElement", "Node", "Window", "Headers", "Request", "RequestInit", "RequestMode", "Response", "DomTokenList"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
crc = "3.2.1"

[profile.release]
opt-level = "s"

[lints.rust]
unsafe_code = "forbid"
rust_2024_compatibility = "warn"

[lints.clippy]
pedantic = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"