[package]
name = "engine"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.49"
console_error_panic_hook = "0.1.7"
web-sys = { version =  "0.3.76", features = [
    "Document", "Element", "HtmlElement", "Node", "Window", "Headers", "Request", "RequestInit", "RequestMode",
    "Response", "DomTokenList", "HtmlAudioElement", "Location", "HtmlInputElement"
] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
crc = "3.2.1"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[lints.rust]
rust_2024_compatibility = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"